# llvm-project-JIT

_jit_test/: .gitignore  CMakeLists.txt  CMakePresets.json
_jit_test/src/: test.cpp
clang/examples/CXXJIT/: CMakeLists.txt  CXXJITPlugin.cpp  JITRegistry.cpp  JITRegistry.hpp  helpers.cpp  helpers.hpp
clang/examples/CXXJIT/AttrAction/: JITAttributeAction.cpp  JITAttributeAction.hpp
clang/examples/CXXJIT/AttrAction/DiagHandler/: JITDiagConsumer.cpp  JITDiagConsumer.hpp
clang/examples/CXXJIT/AttrAction/Visitors/: JITAttrStmtDeclVisitor.cpp  JITAttrStmtDeclVisitor.hpp  JITFunctionCallVisitor.cpp  JITFunctionCallVisitor.hpp  JITFunctionDeclVisitor.cpp
clang/examples/CXXJIT/AttrMarking/: JITAttrInfo.cpp
mytest/: .gitignore
